# AgnosticAgent

./: .editorconfig  .pre-commit-config.yaml  LICENSE  Makefile  README.md  a.txt  aa.txt  functions.py  pyprojec.toml  pyproject.toml  requirements.txt  tox.ini
.github/ISSUE_TEMPLATE/: bug.yml  documentation.yml  enhancement.yml  feature.yml
.github/workflows/: ci.yml
examples/: config.py  config.yaml  examples.md  high_level_agent_usage_patterns.py  low_level_agent_usage_patterns.py  run_all_examples.py  set-up.md  unified_llm_basic.py
examples/01-no-tools/: explanation.md  logs.md  run.py
examples/01-no-tools/utils/: schemas.py
examples/02-tools/hybrid/: explanation.md  run.py
examples/02-tools/hybrid/utils/: explanation.md  toolkit.py
examples/02-tools/parallel/: explanation.md  run.py
examples/02-tools/parallel/utils/: toolkit.py
examples/02-tools/parellel/: run.py
examples/02-tools/sequential/: explanation.md  run.py
examples/02-tools/sequential/utils/: agents.py  toolkit.py
examples/03-file-upload/: explanation.md  run.py
examples/03-file-upload/utils/: agents.py
examples/04-prompt-chaining/: explanation.md  run.py
examples/04-prompt-chaining/utils/: schemas.py
examples/05-orchestrator-worker/: example.md  run.py
examples/05-orchestrator-worker/media/: sample.txt
examples/05-orchestrator-worker/utils/: schemas.py  toolkit.py
examples/06-orchestrator-worker/: example.md
examples/LLM/01-no-tools/: run.py
examples/LLM/01-no-tools/utils/: agents.py  schemas.py
examples/LLM/02-tools/sequential/: run.py
examples/LLM/03-file-upload/: run.py
examples/LLM/04-prompt-chaining/: run.py
examples/LLM/05-parallelization/: explanation.md
src/agentic_ai/: LLMAgent.py  __init__.py  llm_bridge.py  open_router.py
src/agentic_ai/backends/: open_router.py
src/agentic_ai/config/: __init__.py  config.py
src/agentic_ai/docs/: tool_calling.md
src/agentic_ai/llm/: __init__.py  agent_interface.py  interface.py
src/agentic_ai/llm/providers/: __init__.py  openrouter.py
src/agentic_ai/llm_provider/: __init__.py  base.py  base_llm_provider.py  google.py  ollama.py  open_router.py  openai_provider.py
src/agentic_ai/scripts/: google_files.py
src/agentic_ai/utils/: __init__.py
src/agentic_ai/utils/core/: __init__.py  function_calling.py  schemas.py
src/agentic_ai/utils/exception_retry_controller/: __init__.py  exception_retry_controller.py
src/agentic_ai/utils/fault_tolerance/: __init__.py  exception_retry_controller.py
src/agentic_ai/utils/logger/: colorfulFormatter.py  logger.py
src/agnostic_agent/: __init__.py  llm_bridge.py  llm_strategy.py
src/agnostic_agent/config/: config.py  config.yaml
src/agnostic_agent/llm_backends/: __init__.py
src/agnostic_agent/llm_backends/clients/: __init__.py  ollama.py  open_router.py
src/agnostic_agent/llm_backends/providers/: __init__.py  base_llm_provider.py  openai_provider.py
src/agnostic_agent/scripts/: google_files.py
src/agnostic_agent/utils/: __init__.py
tests/: conftest.py  run_examples.py  test_exception_retry_controller.py  test_llm_interface.py
(+11 files in other folders)
